--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.18"
+    "mongoose": "^5.9.18",
+        "dotenv": "^8.2.0"
   },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
-  }
 }
