--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Kevin Basina",
   "license": "MIT",
   "dependencies": {
+    "async": "^3.2.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.22.0",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "speakeasy": "^2.0.0"
   },
   "devDependencies": {
