--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
