--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
+    "sanitizer": "^0.1.3",
     "speakeasy": "^2.0.0",
     "validator": "^13.1.1"
   },
