--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
+    "newsapi": "^2.4.1",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.11",
+    "request-country": "^0.1.5",
     "sanitizer": "^0.1.3",
     "speakeasy": "^2.0.0",
     "validator": "^13.1.1"
