--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^4.1.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
     "multer": "^1.4.2",
@@ -27,7 +30,8 @@
     "request-country": "^0.1.5",
     "sanitizer": "^0.1.3",
     "speakeasy": "^2.0.0",
-    "validator": "^13.1.1"
+    "validator": "^13.1.1",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
