--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "seeder": "node ./seeders/_seeder.js -d && node ./seeders/_seeder.js -i"
   },
   "author": "Kevin Basina",
   "license": "MIT",
@@ -34,6 +35,8 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "chalk": "^4.1.0",
+    "cli-spinner": "^0.2.10",
     "nodemon": "^2.0.4"
   },
   "engines": {
